invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_88.src
.IPPcode24
GETCHAR LF@a int@49